--- a/S2/Images/TP6-3D/CR_TP13D_Thibaut_Castanie.tex
+++ b/S2/Images/TP6-3D/CR_TP13D_Thibaut_Castanie.tex
@@ -4,6 +4,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{listings}
+\usepackage{color}
 %\usepackage{fullpage}
 
 \begin{document}
@@ -80,25 +82,38 @@ En effectuant la moyenne des valeurs des pixels, sur chaque couche, en fonction 
 \includegraphics[scale=0.7]{ecrevisse.png}\\
 \textit{Image obtenue après moyenne sur l'axe Z}
 \end{center}
+\begin{center}
+\includegraphics[scale=0.5]{ecrevisse3Dfiji.png}\\
+\textit{Images obtenues visualisées en trois dimensions avec Fiji}
+\end{center}
 
 
 \newpage 
 \section*{Annexe - Code}
-\begin{verbatim}
+
+\lstset{language=C++,
+                basicstyle=\ttfamily,
+                breaklines=true,
+                keywordstyle=\color{blue}\ttfamily,
+                stringstyle=\color{red}\ttfamily,
+                commentstyle=\color{green}\ttfamily,
+                morecomment=[l][\color{magenta}]{\#}
+}
+
+\begin{lstlisting}
 #include <iostream>
 #include <stdio.h>
 #include <cstdlib>
 #include <math.h>
 #include <string> 
 using namespace std;
-
-int tailleX = 512;
-int tailleY = 512;
-int tailleZ = 48;
+int tailleX = 301;
+int tailleY = 324;
+int tailleZ = 56;
 unsigned short * buffer;
 
 int getValue(unsigned short * buffer,int x, int y, int z){
-    int num = z*(tailleX*tailleY)+(y*tailleY)+x;
+    int num = z*(tailleX*tailleY)+(y*tailleX)+x;
     int oct1 = buffer[num]%256;
     int oct2 = buffer[num]/256;
     int valPixel = oct1*256+oct2;
@@ -118,8 +133,8 @@ int main(int argc, char const *argv[]){
     //imgFile = fopen ("./BRAINIX/brainix.256x256x100.0.9375x0.9375x1.5.img","rb");
     //imgFile = fopen ("./engine/engine.256x256x128.1x1x1.img","rb");
     //imgFile = fopen ("./FOOT/foot.256x256x256.1.1.1.img","rb");
-    imgFile = fopen ("./MANIX/manixSansIV.512x512x48.0.4570x0.4570x3.0.img","rb");
-    //imgFile = fopen ("./WHATISIT/whatisit.301x324x56.1.1.1.4.img","rb");
+    //imgFile = fopen ("./MANIX/manixSansIV.512x512x48.0.4570x0.4570x3.0.img","rb");
+    imgFile = fopen ("./WHATISIT/whatisit.301x324x56.1.1.1.4.img","rb");
     if (imgFile!=NULL){
         fseek (imgFile , 0 , SEEK_END);
         taille = ftell (imgFile);
@@ -140,8 +155,7 @@ int main(int argc, char const *argv[]){
         }
         int retour = getValue(buffer,200,200,20);
         cout << retour << endl;
-
-        stockFile = fopen ("manix.0.raw","wb");
+        stockFile = fopen ("whatisit.0.raw","wb");
         unsigned short *render = new unsigned short[tailleX*tailleZ*tailleY];
         int cpt=0;
         for (int k = 0; k < tailleY; k++){
@@ -153,13 +167,12 @@ int main(int argc, char const *argv[]){
             }
         }
         fwrite(render,2,tailleX*tailleZ*tailleY,stockFile);
-
         fclose (stockFile);
         fclose (imgFile);
         free (buffer);
     }
     return 0;
 }
-\end{verbatim}
+\end{lstlisting}
 
 \end{document}
